jamalyzer-client/components/wireframe/Footer.module.css
.footer {
  display: flex;
  align-items: center;
  justify-content: center;

  min-height: 12rem;
  background-color: var(--primary-color);

  transition: background-color 0.4s ease;
}

.footer {
  color: white;
  text-decoration: none;
  text-align: center;
}

.copyright {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 1rem;
  flex: 2;

  width: 20rem;
}

.link {
  display: flex;
  align-items: center;
  justify-content: center;
}

.link img {
  width: 1.5rem;
  height: 1.5rem;

  filter: brightness(0%) invert(1);
}

.categories {
  display: flex;
  justify-content: flex-start;
  align-items: flex-start;
  gap: 4rem;
  flex: 3;

  width: 100%;
}

.category {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  gap: 0.5rem;
  flex: 1;
}

.category a:hover {
  color: var(--secondary-color);
}

@media (max-width: 1000px) {
  .footer {
    flex-direction: column;
  }

  .categories {
    justify-content: center;
    margin-bottom: 1rem;
  }
}

@media (max-width: 600px) {
  .categories {
    flex-direction: column;
  }
}

